<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Welcome"
        android:background="@drawable/welcome">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:fontFamily="@font/bold"
            android:textColor="#fff"
            android:text="@string/Bienvenido"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintVertical_bias="0.058"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>

    <Button
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/botto"
            android:text="@string/Log"
            android:textColor="#fff"
            android:textAllCaps="false"

            tools:ignore="MissingConstraints,RtlCompat,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.29"
            app:layout_constraintHorizontal_bias="0.08"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/san_francisco_regular"
            android:textColor="#fff"
            android:alpha="0.5"
            android:text="@string/drescription"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintVertical_bias="0.169"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:textColor="#03A9F4"
            android:alpha="1.0"
            android:text="@string/Register"
            tools:ignore="MissingConstraints,RtlHardcoded,UnknownIdInLayout"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.987"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.026"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/san_francisco_regular"
            android:textColor="#000"
            android:alpha="0.5"
            android:text="@string/drescription_account"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.987"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/textView2"/>


</androidx.constraintlayout.widget.ConstraintLayout>