<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Welcome"
        android:background="#fff">


    <Button
            android:layout_width="162dp"
            android:layout_height="57dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/botto"
            android:text="@string/data_forgot"
            android:textColor="#fff"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            android:id="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintVertical_bias="0.137"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp"/>

    <EditText
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/edit_text"
            android:hint="@string/User"
            android:textColor="#000"
            android:alpha="0.6"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.426"
            app:layout_constraintHorizontal_bias="0.384"
            android:id="@+id/editText3"
            android:paddingLeft="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:textColor="#03A9F4"
            android:alpha="1.0"
            android:text="@string/Register"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/textView5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/san_francisco_regular"
            android:textColor="#000"
            android:alpha="0.5"
            android:text="@string/drescription_account"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.968"
            android:id="@+id/textView"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>

    <ImageView
            android:id="@+id/Logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/logo_transparent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"

            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.064"/>


</androidx.constraintlayout.widget.ConstraintLayout>