<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Welcome"
        android:background="#fff">


    <EditText
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/edit_text"
            android:hint="@string/paseord"
            android:textColor="#000"
            android:textAllCaps="false"
            android:alpha="0.7"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:paddingStart="20dp"
            tools:ignore="MissingConstraints,RtlCompat,RtlHardcoded,RtlSymmetry"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintHorizontal_bias="0.384"
            android:id="@+id/button2"/>

    <Button
            android:layout_width="162dp"
            android:layout_height="57dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/botto"
            android:text="@string/Register"
            android:textColor="#fff"
            android:textAllCaps="false"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.926"
            app:layout_constraintHorizontal_bias="0.47"
            android:id="@+id/button"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>

    <EditText
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/edit_text"
            android:hint="@string/User"
            android:textColor="#000"
            android:alpha="0.6"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            tools:ignore="Autofill,MissingConstraints,RtlHardcoded,RtlSymmetry,TextFields"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.586"
            app:layout_constraintHorizontal_bias="0.48"
            android:paddingLeft="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="20dp"/>


    <EditText
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/edit_text"
            android:hint="@string/dato_1"
            android:textColor="#000"
            android:alpha="0.6"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            tools:ignore="Autofill,MissingConstraints,RtlCompat,RtlHardcoded,RtlSymmetry,TextFields"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.245"
            app:layout_constraintHorizontal_bias="0.48"
            android:id="@+id/editText"
            android:paddingLeft="20dp"
            android:layout_marginRight="8dp"/>

    <EditText
            android:layout_width="331dp"
            android:layout_height="71dp"
            android:textSize="25sp"
            android:fontFamily="@font/san_francisco_regular_d"
            android:background="@drawable/edit_text"
            android:hint="@string/dato_2"
            android:textColor="#000"
            android:alpha="0.6"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            tools:ignore="Autofill,MissingConstraints,RtlCompat,RtlHardcoded,RtlSymmetry,TextFields"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.41"
            app:layout_constraintHorizontal_bias="0.48"
            android:id="@+id/editText2"/>

    <ImageView
            android:id="@+id/Logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/logo_transparent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.014"/>


</androidx.constraintlayout.widget.ConstraintLayout>