<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mobile"
        tools:context=".menuCategorias">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ScrollViewSize,UselessLeaf">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="193dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="UselessParent"
                    android:baselineAligned="false">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/log"
                        tools:ignore="ContentDescription,MissingConstraints"
                        android:layout_marginTop="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="90dp"
                        android:layout_marginEnd="90dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="90dp"/>


            </RelativeLayout>

            <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnOrderPreserved="false"
                    android:alignmentMode="alignMargins"
                    android:layout_marginTop="20dp"
                    android:rowCount="3"
                    android:columnCount="2">

                <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        card_view:cardBackgroundColor="#F4F4F4"
                        android:layout_height="150dp"
                        android:clickable="true"
                        android:layout_marginLeft="35dp"
                        card_view:cardCornerRadius="10dp"
                        android:layout_marginTop="15dp"
                        tools:ignore="KeyboardInaccessibleWidget,RtlHardcoded">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="ExtraText">

                        <TextView
                                tools:ignore="MissingConstraints,MissingPrefix"
                                android:text="@string/menu1"
                                android:textSize="20sp"
                                android:fontFamily="@font/san_francisco_regular_d"
                                android:textColor="#334956"
                                android:layout_width=" wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                />

                        <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="44dp"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                tools:ignore="ContentDescription"
                                android:src="@drawable/hospital"
                                android:layout_marginTop="8dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        card_view:cardBackgroundColor="#F4F4F4"
                        android:layout_height="150dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="35dp"
                        android:clickable="true"
                        android:layout_marginRight="50dp"
                        card_view:cardCornerRadius="10dp"
                        tools:ignore="KeyboardInaccessibleWidget,RtlHardcoded">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="ExtraText">

                        <TextView
                                tools:ignore="MissingConstraints,MissingPrefix"
                                android:text="@string/menu2"
                                android:textSize="20sp"
                                android:fontFamily="@font/san_francisco_regular_d"
                                android:textColor="#334956"
                                android:layout_width=" wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"/>

                        <ImageView
                                android:layout_width="100dp"
                                android:src="@drawable/droga"
                                android:layout_height="100dp"
                                android:layout_marginBottom="44dp"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                tools:ignore="ContentDescription"
                                android:layout_marginTop="8dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        android:layout_marginTop="50dp"
                        card_view:cardBackgroundColor="#F4F4F4"
                        android:layout_height="150dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginBottom="50dp"
                        android:clickable="true"
                        card_view:cardCornerRadius="10dp"
                        tools:ignore="KeyboardInaccessibleWidget,RtlHardcoded">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="ExtraText">

                        <TextView
                                tools:ignore="MissingConstraints,MissingPrefix"
                                android:text="@string/menu3"
                                android:textSize="20sp"
                                android:fontFamily="@font/san_francisco_regular_d"
                                android:textColor="#334956"
                                android:layout_width=" wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                />

                        <ImageView
                                android:layout_width="94dp"
                                android:src="@drawable/escuela"
                                android:layout_height="97dp"
                                android:layout_marginBottom="44dp"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                tools:ignore="ContentDescription"
                                />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_gravity="center"
                        android:layout_width="150dp"
                        card_view:cardBackgroundColor="#F4F4F4"
                        android:layout_height="150dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="50dp"
                        card_view:cardCornerRadius="10dp"
                        android:clickable="true"
                        tools:ignore="KeyboardInaccessibleWidget,RtlHardcoded">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="ExtraText">

                        <TextView
                                tools:ignore="MissingConstraints,MissingPrefix"
                                android:text="@string/menu4"
                                android:textSize="20sp"
                                android:fontFamily="@font/san_francisco_regular_d"
                                android:textColor="#334956"
                                android:layout_width=" wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"/>

                        <ImageView
                                android:layout_width="100dp"
                                android:src="@drawable/dieta"
                                android:layout_height="100dp"
                                android:layout_marginBottom="44dp"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginEnd="8dp"
                                card_view:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="8dp"
                                tools:ignore="ContentDescription"
                                android:layout_marginTop="8dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </GridLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>